--- a/assets/bitstarter.css
+++ b/assets/bitstarter.css
@@ -1,9 +1,11 @@
 /* MAC: */
 /* Large desktop */
 @media (min-width: 980px) {
+/* MAC: media query for browsers with less than 980px width to fix an issue where the navbar is pushed too far down on mobile browsers*/
   body {
    padding-top: 60px;
   }
+  /* For the thermometer widget, use linediv-l and linediv-c in an interesting way with  media queries, to give vertical lines when these spans are laid out horizontally (in a desktop view) and horizontal lines when laid out vertically (in a mobile view). */
  .linediv-l {
    border-right: 1px white solid;
   }
@@ -14,6 +16,7 @@
 
 /* Landscape phones and down */
 @media (max-width: 480px) {
+/* MAC: media query for browsers with less than 980px width to fix an issue where the navbar is pushed too far down on mobile browsers*/
  .copy {
    padding: 2.5% 10%;
  }
@@ -28,29 +31,58 @@
 /* All form factors */
 
 body {
-  padding-top: 20px;
-  padding-bottom: 40px;
+  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
 }
-p.lead {
-  padding-top: 15px;
-}
-.navigation, .pitch, .section1, .section2, .faq, .footer {
-  padding: 10px 0px 10px 0px;
-}
-.video, .thermometer, .order, .social {
-  border: 1px dotted;
+.heading, .subheading {
+  font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
   text-align: center;
 }
-.video {
-  /* Internal borders have 1px width, thus need to add 4 x 1px to 120px. */
-  height: 124px;
-  line-height: 124px;
+p.lead {
+  padding-top: 1.5%;
+  font-size: 24px;
+  line-height: 30px;
 }
-.thermometer, .order, .social {
-  /* line-height to vertically center: http://phrogz.net/css/vertical-align/index.html */
-  height: 40px;
-  line-height: 40px;
+p {
+  font-size: 18px;
+  line-height: 24px;
 }
-div.row-fluid {
-  border: 1px solid;
+
+
+/* Video pitch and Action */
+.pitch {
+  padding: 2.5% 0%;
+}
+.order {
+  padding: 2% 0%;
+}
+.actions {
+  background-color: #343434;
+  padding: 3% 0%;
+}
+.video, .thermometer, .order, .social, .statistics {
+  text-align: center;
+}
+.statistics h3, .statistics p {
+  color: white;
+}
+
+
+/* Marketing Copy and Footer */
+.copy {
+  padding-top: 2.5%;
+  padding-bottom: 2.5%;
+  text-align: justify;
+}
+.asset {
+  padding: 2.5% 0%;
+}
+.footer {
+  color: #cccccc;
+  text-align: center;
+}
+.footer p {
+  font-size: 11px;
+}
+.footer a {
+  color: #ccccff;
 }
